# trino-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.adoc  README.md  _KEYTOOL.md  bors.toml  crate-hashes.json  deny.toml  renovate.json  truststore.p12
.ci/integration-tests/aws-eks/: cluster.yaml
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/hcloud-centos-8/: cluster.yaml
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: build.yaml  build.yml  daily_security.yml  docker.yml  helm_tests.yml  integration-test.yml  pr_generate_manifests.yml  pr_prek.yaml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  reviewdog.yaml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
_WORK/: Dockerfile  README.md  trino.yaml
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: restart.crd.yaml  start.crd.yaml  stop.crd.yaml  trinocatalog.crd.yaml  trinocluster.crd.yaml
deploy/helm/trino-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/trino-operator/configs/: properties.yaml
deploy/helm/trino-operator/crds/: crds.yaml
deploy/helm/trino-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  configmap.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/manifests/: Kustomization  configmap.yaml  crds.yaml  deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/olm/: bundle.sh
deploy/olm/23.4.0/manifests/: configmap.yaml  roles.yaml  stackable-trino-operator.clusterserviceversion.yaml  trinocatalog.yaml  trinocluster.yaml
deploy/olm/23.4.0/metadata/: dependencies.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: building.adoc  commandline_args.adoc  concepts.adoc  configuration.adoc  env_var_args.adoc  index.adoc  installation.adoc  usage.adoc
docs/modules/ROOT/partials/: supported-versions.adoc
docs/modules/getting_started/: nav.adoc
docs/modules/getting_started/pages/: first_steps.adoc  index.adoc  installation.adoc
docs/modules/trino/: nav.adoc
docs/modules/trino/images/: .$trino_overview.drawio.svg.bkp  .$trino_overview.drawio.svg.dtmp
docs/modules/trino/pages/: concepts.adoc  index.adoc
docs/modules/trino/partials/: nav.adoc  supported-versions.adoc
docs/modules/usage_guide/: nav.adoc
docs/modules/usage_guide/pages/: catalogs.adoc  cluster.adoc  configuration.adoc  index.adoc  log-aggregation.adoc  query.adoc  security.adoc  setup.adoc
examples/: restart.command.example.yaml  simple-hive-cluster-derby.yaml  simple-opa-cluster.yaml  simple-trino-cluster-authentication-opa-authorization-s3.yaml  simple-trino-cluster-authentication-opa-authorization.yaml  simple-trino-cluster-fault-tolerant-execution.yaml  simple-trino-cluster-hive-ha-s3.yaml  simple-trino-cluster-ldap.yaml  simple-trino-cluster-pod-overrides.yaml  simple-trino-cluster-resource-limits.yaml  simple-trino-cluster-s3.yaml  simple-trino-cluster.yaml  simple-trino-oauth2.yaml  simple-trino-user-secret.yaml  simple-trino-users-secret.yaml  start.command.example.yaml  stop.command.example.yaml
extra/: crds.yaml
nix/: meta.json  sources.json
packaging/: buildrpm.sh  copy_assets.py
packaging/rpm/SPECS/: stackable-trino-operator.spec
python/: cargo-version.py  cargo_version.py
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  authentication.rs  authorization.rs  catalog.rs  commands.rs  config.rs  constants.rs  discovery.rs  error.rs  lib.rs
rust/crd/src/catalog/: black_hole.rs  commons.rs  delta_lake.rs  generic.rs  google_sheet.rs  hive.rs  iceberg.rs  mod.rs  tpch.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: catalog.rs  command.rs  config.rs  controller.rs  discovery.rs  listener.rs  main.rs  product_logging.rs  service.rs  stackable-trino-operator.rs  trino_controller.rs  trino_version.rs  utils.rs
rust/operator-binary/src/authentication/: mod.rs  password.rs
rust/operator-binary/src/authentication/oidc/: mod.rs
rust/operator-binary/src/authentication/password/: file.rs  ldap.rs  mod.rs
rust/operator-binary/src/authorization/: opa.rs
rust/operator-binary/src/catalog/: black_hole.rs  commons.rs  config.rs  delta_lake.rs  generic.rs  google_sheet.rs  hive.rs  iceberg.rs  mod.rs  postgresql.rs  tpcds.rs  tpch.rs
rust/operator-binary/src/config/: client_protocol.rs  fault_tolerant_execution.rs  jvm.rs  mod.rs  s3.rs
rust/operator-binary/src/controller/: build.rs  dereference.rs  mod.rs  validate.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  client_protocol.rs  discovery.rs  fault_tolerant_execution.rs  mod.rs  s3.rs
rust/operator-binary/src/crd/catalog/: commons.rs  delta_lake.rs  generic.rs  google_sheet.rs  hive.rs  iceberg.rs  mod.rs  postgresql.rs  tpcds.rs
rust/operator-binary/src/framework/: mod.rs  role_utils.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  mod.rs  pdb.rs  scaling.rs  trino_api.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator/src/: error.rs  lib.rs
scripts/: docs_templating.sh  generate-manifests.sh  run_tests.sh
tests/: infrastructure.yaml  kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
tests/spark/: README.md  build.gradle
tests/templates/kuttl/authentication/: 01-assert.yaml  02-assert.yaml  02-create-ldap-user.yaml  03-install-test-trino.yaml  03-keycloak-realm.yaml  04-assert.yaml  04-install-keycloak.yaml.j2  05-assert.yaml  05-install-test-trino.yaml  05-install-test-trino.yaml.j2  11-create-authentication-classes.yaml  12-assert.yaml  12-create-trino-cluster.yaml  20-assert.yaml  20-test-trino.yaml  30-hot-reloading-add-user.yaml  31-assert.yaml  32-hot-reloading-remove-user.yaml  33-assert.yaml  (+9 more)
tls/: keystore.jks
(+366 files in other folders)
