[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Trino CRD structs and utilities"
edition = "2021"
license = "OSL-3.0"
name = "stackable-trino-crd"
repository = "https://github.com/stackabletech/trino-operator"
publish = false
version.workspace = true

[dependencies]
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
stackable-operator = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
rstest = { workspace = true }
serde_yaml = { workspace = true }
