[package]
name = "stackable-trino-crd"
description = "Contains the Trino CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
indoc.workspace = true
rstest.workspace = true
serde_yaml.workspace = true
