[package]
authors = ["Stackable GmbH <info@stackable.de>"]
build = "build.rs"
description = "Stackable Operator for Trino"
edition = "2021"
license = "OSL-3.0"
name = "stackable-trino-operator"
repository = "https://github.com/stackabletech/trino-operator"
version = "23.4.1"
publish = false

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.2" }
stackable-trino-crd = { path = "../crd" }

anyhow = "1.0"
async-trait = "0.1"
clap = "4.0"
futures = { version = "0.3", features = ["compat"] }
indoc = "1.0.7"
openssl = "0.10.42"
pin-project = "1.0"
semver = "1.0"
snafu = "0.7"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.40.2" }
stackable-trino-crd = { path = "../crd" }
