[package]
authors = ["Stackable GmbH <info@stackable.de>"]
build = "build.rs"
description = "Stackable Operator for Trino"
edition = "2021"
license = "OSL-3.0"
name = "stackable-trino-operator"
repository = "https://github.com/stackabletech/trino-operator"
publish = false
version.workspace = true

[dependencies]
stackable-trino-crd = { path = "../crd" }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
indoc = { workspace = true }
openssl = { workspace = true }
pin-project = { workspace = true }
semver = { workspace = true }
snafu = { workspace = true }
stackable-operator = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
built = { workspace = true }
