[package]
name = "stackable-trino-operator"
description = "Stackable Operator for Trino"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[dependencies]
stackable-trino-crd = { path = "../crd" }

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
indoc.workspace = true
openssl.workspace = true
pin-project.workspace = true
product-config.workspace = true
semver.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
built.workspace = true
