[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Trino - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-trino-operator"
repository = "https://github.com/stackabletech/trino-operator"
version = "0.1.0-nightly"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", branch = "main" }
stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-trino-crd = { path = "../crd" }

async-trait = "0.1"
futures = "0.3"
k8s-openapi = { version = "0.13", default-features = false }
kube = { version = "0.60", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
rstest = "0.11"
