[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Trino - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-trino-operator"
repository = "https://github.com/stackabletech/trino-operator"
version = "0.2.0-nightly"

[dependencies]
stackable-hive-crd = { git = "https://github.com/stackabletech/hive-operator.git", tag = "0.1.0" }
stackable-opa-crd = { git = "https://github.com/stackabletech/opa-operator.git", tag = "0.4.1" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.3.0" }
stackable-trino-crd = { path = "../crd" }

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
rstest = "0.11"
